--- a/moments2.html
+++ b/moments2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Moments</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Our Kiss - Moments</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="our-story.html">Our Story</a></li>
-                <li><a href="moments/index1.html">Moments</a></li>
+                <li><a href="index1.html">Moments</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="favorites.html">Our Favorites</a></li>
                 <li><a href="tiktoks.html">Tiktoks</a></li>
@@ -25,21 +25,11 @@
     </header>
 
     <main>
-        <section class="moments-list">
-            <div class="moment-item">
-                <a href="moment1.html">
-                    <img src="../images/moment1-thumb.jpg" alt="Moment 1 Thumbnail">
-                    <h3>Our First Date</h3>
-                    <p class="date">October 26, 2024</p>
-                </a>
-            </div>
-            <div class="moment-item">
-                <a href="moment2.html">
-                    <img src="../images/moment2-thumb.jpg" alt="Moment 2 Thumbnail">
-                    <h3>First Kess</h3>
-                    <p class="date">February 14, 2025</p>
-                </a>
-            </div>
+        <section class="moment-detail">
+            <h2>Our First Date</h2>
+            <p class="date">October 26, 2024</p>
+            <img src="../images/first-date.jpg" alt="Our First Date Photo" class="moment-image">
+            <p>Write a detailed description of your first date. What did you do? How did you feel? What are your favorite memories from that day?</p>
             </section>
     </main>
 
