--- a/tiktoks.html
+++ b/tiktoks.html
@@ -51,7 +51,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="our-story.html">Our Story</a></li>
-                <li><a href="moments/index1.html">Moments</a></li>
+                <li><a href="index1.html">Moments</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="favorites.html">Our Favorites</a></li>
                 <li><a href="tiktoks.html">Tiktoks</a></li>
