--- a/moments1.html
+++ b/moments1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Kiss - Moments</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Our First Date - Moments</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="our-story.html">Our Story</a></li>
-                <li><a href="moments/index1.html">Moments</a></li>
+                <li><a href="index1.html">Moments</a></li>
                 <li><a href="photos.html">Photos</a></li>
                 <li><a href="favorites.html">Our Favorites</a></li>
                 <li><a href="tiktoks.html">Tiktoks</a></li>
@@ -27,8 +27,8 @@
     <main>
         <section class="moment-detail">
             <h2>Our First Date</h2>
-            <p class="date">October 26, 2024</p>
-            <img src="../images/first-date.jpg" alt="Our First Date Photo" class="moment-image">
+            <p class="date">December 30, 2023</p>
+            <img src="firstdate1.jpg" alt="Our First Date Photo" class="moment-image">
             <p>Write a detailed description of your first date. What did you do? How did you feel? What are your favorite memories from that day?</p>
             </section>
     </main>
